--- a/src/styles/status_equipe.css
+++ b/src/styles/status_equipe.css
@@ -5,7 +5,7 @@
     font-family: 'Inter', sans-serif;
 
 }
-.main{
+.main-equipe{
     display: flex;
     flex-direction: column;
     width: 483px; 
@@ -13,22 +13,22 @@
     background-color: #000;
 
 }
-.status{
+.status-equipe{
     color: #fff;
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-left: 5%;
     margin-top: 2%;
     margin-bottom: 5%;
 }
 
-.main-elements{
+.main-elements-equipe{
     display: flex;
     gap: 2%;
     width: 100%;
     height: 27vh;
 }
 
-.status-1{
+.status-1-equipe{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,7 +38,7 @@
 
 }
 
-.status-frame{
+.status-frame-equipe{
     width: 80px;
     height: 80px;
     background-color: grey;
@@ -48,7 +48,7 @@
    
 }
 
-.status-text{
+.status-text-equipe{
     color: #fff;
     margin-left: 10%;
     margin-top: 30%;
